Se realizaron los cambios a las lecturas

--- a/autores.html
+++ b/autores.html
@@ -41,7 +41,7 @@
     <section>
         <div id="contenidoLectura">
             <div class="autores" id="profile1">
-                <h3>DISEÑOS DE SITIOS WEB</h3>
+                <h3>301122_27 - DISEÑOS DE SITIOS WEB</h3>
                 <div class="user">
                     <img class="profile" src="./img/luz.jpeg">
                     <p id="nombres"><span>Luz Stella </span>
@@ -51,9 +51,9 @@
                 <h4>luztoloza@hotmail.com</h4>
             </div>
             <div class="autores" id="profile2">
-                <h3>DISEÑOS DE SITIOS WEB</h3>
+                <h3>301122_27 - DISEÑOS DE SITIOS WEB</h3>
                 <div class="user">
-                    <img class="profile" src="./img/ramirezJ.jpg">
+                    <img class="profile" src="./img/f1.jpg">
                     <p id="nombres">
                         <span>Jhoann </span>
                         <span>Ramirez</span>
@@ -63,32 +63,32 @@
                 <h4>jhoann.ramirez.carvajal@gmail.com</h4>
             </div>
             <div class="autores" id="profile3">
-                <h3>DISEÑOS DE SITIOS WEB</h3>
+                <h3>301122_27 - DISEÑOS DE SITIOS WEB</h3>
                 <div class="user">
                     <img class="profile" src="./img/new1.png">
-                    <p id="nombres"><span>NOMBRE </span>
-                        <span>APELLIDO</span></p>
+                    <p id="nombres"><span>Gustavo </span>
+                        <span>Mambuscay</span></p>
                 </div>
                 <h5>Ingenieria de Sistemas</h5>
                 <h4>CORREO</h4>
             </div>
             <div class="autores" id="profile4">
-                <h3>DISEÑOS DE SITIOS WEB</h3>
+                <h3>301122_27 - DISEÑOS DE SITIOS WEB</h3>
                 <div class="user">
                     <img class="profile" src="./img/new1.png">
-                    <p id="nombres"><span>NOMBRE </span>
-                        <span>APELLIDO</span></p>
+                    <p id="nombres"><span>Camilo </span>
+                        <span>Moros</span></p>
                 </div>
                 <h5>Ingenieria de Sistemas</h5>
                 <h4>CORREO</h4>
             </div>
             <div class="autores" id="profile5">
-                <h3>DISEÑOS DE SITIOS WEB</h3>
+                <h3>301122_27 - DISEÑOS DE SITIOS WEB</h3>
                 <div class="user">
                     <img class="profile" src="./img/new1.png">
                     <p id="nombres">
-                        <span>NOMBRE </span>
-                        <span>APELLIDO</span>
+                        <span>Diana </span>
+                        <span>Penaloza</span>
                     </p>
                 </div>
                 <h5>Ingenieria de Sistemas</h5>
@@ -101,10 +101,6 @@
         </aside>
     </section>
     <footer>
-       <div id="sfc8hx5zrns31lb5mzu55u1qazyr8cj6ufd"></div>
-<script type="text/javascript" src="https://counter5.wheredoyoucomefrom.ovh/private/counter.js?c=8hx5zrns31lb5mzu55u1qazyr8cj6ufd&down=async" async></script>
-<noscript><a href="https://www.contadorvisitasgratis.com" title="contador de visitas html"><img src="https://counter5.wheredoyoucomefrom.ovh/private/contadorvisitasgratis.php?c=8hx5zrns31lb5mzu55u1qazyr8cj6ufd" border="0" title="contador de visitas html" alt="contador de visitas html"></a></noscript>
-				
     </footer>
 </body>
 
