--- a/lectura.html
+++ b/lectura.html
@@ -50,6 +50,17 @@
                 </a>
             </div>
             <div class="lectura" id="lectura2">
+                <h2>TIPOS DE ORDENAMIENTO</h2>
+                <p>Los 2 tipos de ordenamientos que se pueden realizar son:</p>
+                <h2>1. Los Internos</h2>
+                <p>Son aquellos en los que los valores a ordenar estan en la memoria principal, por lo que se asume que el tiempo que se requiere para acceder cualquier elemento sea el mismo (a[1],a[500],etc).</p>
+                <h2>2. Los Externos</h2>
+                <p>Son aquellos en los que los valores a ordenar están en la memoria secuandaria (disco,cinta,cilindro magnético, etc), por lo que se asume que el tiempo que se requiere para acceder a cualquier elemento depende de la última posición accesada
+                    (posición 1,posición 500,etc).</p>
+                <a class="icon-circle-up" href="#contenido">
+                </a>
+            </div>
+            <div class="lectura" id="lectura3">
                 <h2>MÉTODO DE LA BURBUJA</h2>
                 <p>El algoritmo permite ordenar los elementos de la lista revisando cada uno de ellos y cambiándolos de posición si es necesario, es necesario realizar varias veces el proceso hasta que la lista de datos este ordenada. El algoritmo obtiene
                     su nombre debido a como suben los elementos por la lista durante su ordenamiento.</p>
@@ -64,7 +75,7 @@
                 <a class="icon-circle-up" href="#contenido">
                 </a>
             </div>
-            <div class="lectura" id="lectura3">
+            <div class="lectura" id="lectura4">
                 <h2>MÉTODO DE LA SELECCIÓN</h2>
                 <p>El algoritmo permite ordenar los elementos de la lista. Funciona de la siguiente manera: </p>
                 <p>1. Busca el elemento menor de la lista </p>
@@ -81,7 +92,7 @@
                 <a class="icon-circle-up" href="#contenido">
                 </a>
             </div>
-            <div class="lectura" id="lectura4">
+            <div class="lectura" id="lectura5">
                 <h2>MÉTODO DE LA INSERCIÓN</h2>
                 <p>El algoritmo permite ordenar los elementos de la lista. </p>
                 <p>Funciona de la siguiente manera: </p>
@@ -96,15 +107,6 @@
                 <a class="icon-circle-up" href="#contenido">
                 </a>
             </div>
-            <div class="lectura" id="lectura5">
-                <h2>Mi Quinta Lectura</h2>
-                <p>Modulo de la primera lectura Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint perferendis mollitia, sed est libero magnam inventore delectus consequuntur quibusdam commodi officia a ullam aliquam sapiente. Reiciendis quidem
-                    corrupti quae soluta! Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt aperiam corrupti eveniet, deserunt error dolorum iusto voluptas ad sint iste omnis, praesentium dolore sequi voluptatibus? Accusamus officia magni
-                    a vero? Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga illo earum quam odit, saepe iusto doloremque reiciendis optio consectetur animi laborum porro vitae neque at quidem explicabo? Eius, ducimus culpa!
-                </p>
-                <a class="icon-circle-up" href="#contenido">
-                </a>
-            </div>
         </div>
         <aside>
             <a class="twitter-timeline" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a>
@@ -112,10 +114,7 @@
         </aside>
     </section>
     <footer>
-      <div id="sfc8hx5zrns31lb5mzu55u1qazyr8cj6ufd"></div>
-<script type="text/javascript" src="https://counter5.wheredoyoucomefrom.ovh/private/counter.js?c=8hx5zrns31lb5mzu55u1qazyr8cj6ufd&down=async" async></script>
-<noscript><a href="https://www.contadorvisitasgratis.com" title="contador de visitas html"><img src="https://counter5.wheredoyoucomefrom.ovh/private/contadorvisitasgratis.php?c=8hx5zrns31lb5mzu55u1qazyr8cj6ufd" border="0" title="contador de visitas html" alt="contador de visitas html"></a></noscript>
-				
+
     </footer>
 </body>
 
