--- a/actividades.html
+++ b/actividades.html
@@ -78,11 +78,11 @@
             </div>
         </div>
         <aside>
-            <a class="twitter-timeline" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            <a class="twitter-timeline" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a>
+            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </aside>
     </section>
     <footer>
-        <p>Contador de Visitas</p>
     </footer>
 </body>
 
