Se realizaron los cambios a Multimedia

--- a/multimedia.html
+++ b/multimedia.html
@@ -44,7 +44,7 @@
             </div>
             <section id="videos">
                 <article>
-                    <a id="video1" href="https://www.youtube.com/embed/KkTA4bbD-vg?autoplay=1"><img src="https://img.youtube.com/vi/DQ6-PSmWThY/1.jpg"></a>
+                    <a id="video1" href="https://www.youtube.com/embed/KkTA4bbD-vg?autoplay=1"><img src="https://img.youtube.com/vi/KkTA4bbD-vg/1.jpg"></a>
                 </article>
                 <article>
 
